--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,7 @@ title: Részecskeszűrő Tisztítás
 email: dpfmoso@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   DPF Részecskeszűrők tisztítását végezzük Létavértesen.
-baseurl: /dpf-cleaning
-url: https://UncleCharlie.github.io
+url: "http://zoldfonix.hu"
 twitter_username: jekyllrb
 github_username:  jekyll
 
